fix: Adjust padding for dropdown icon for better visual alignment

--- a/src/layouts/header/top/wrapper/nav/nav.css
+++ b/src/layouts/header/top/wrapper/nav/nav.css
@@ -168,7 +168,7 @@ a {
 }
 
 .nav-menu-li .ico-chevron-down {
-  padding: 0px;
+  padding: 2px;
 }
 /* === DROPDOWN MENUS === */
 
